language/move-lang/tests/move_check/naming/nominal_resource_field_in_struct_shallow.move
module M {
    resource struct R {}
    struct S {
        f: R
    }
    struct S2<T: resource> {
        f: R
    }
}
